# resume_tailor

./: .gitignore  CLAUDE.md  README.md  cli.py  config.py  pyproject.toml  resume_reader.py  todo.md
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-tests.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  capture.md  cleanup.md  code-review.md  complete-milestone.md  config.md  debug.md  discuss-phase.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract-learnings.md  fast.md  forensics.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  manager.md  map-codebase.md  milestone-summary.md  mvp-phase.md  new-milestone.md  new-project.md  pause-work.md  phase.md  plan-phase.md  plan-review-convergence.md  pr-branch.md  profile-user.md  progress.md  quick.md  (+19 more)
.claude/get-shit-done/references/: artifact-types.md  context-budget.md  model-profile-resolution.md  (+2 more)
.devcontainer/: Dockerfile
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.zed/: settings.json  tasks.json
resume_tailor/: __init__.py  config.py  resume_writer.py
src/: cli.py  cli_test.py  config.py  llm_client.py  llm_client_test.py  log_manager.py  resume_reader.py  resume_writer.py
(+71 files in other folders)
