[project]
name = "resume-tailor"
version = "0.1.0"
description = "Tailor a LaTeX resume to a job description using a local Ollama LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["requests>=2.32.0"]

[project.scripts]
resume-tailor = "cli:main"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
include = ["src/cli.py", "src/config.py", "src/resume_reader.py", "src/resume_writer.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
